# SeaBattle

./: README.md
.github/workflows/: main.yml
part1/: README.md  bot.h  buildField.h  client.h  field.h  interactor.cpp  ship.h
part2/: CMakeLists.txt  README.md  interactor.cpp
part2/include/: bot.h  buildField.h  client.h  field.h  ship.h
part2/src/: CMakeLists.txt  bot.cpp  buildField.cpp  client.cpp  field.cpp  ship.cpp
